# repgrep

./: .gitignore  .gitmodules  .hidden  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT_NOTES.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  config  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md  parsing_json.rs
ci/: cargo-out-dir.sh  install-packages-macos.sh  install-packages-ubuntu.sh
doc/: help.txt  rgr.1  rgr.1.template
foo/: foo
src/: cli.rs  encoding.rs  main.rs  replace.rs  util.rs
src/cli/: args.rs  mod.rs
src/model/: item.rs  mod.rs  movement.rs  printable.rs  replacement.rs
src/model/snapshots/: rgr__model__item__tests__line_numbers_with_line_wrap_multi_submatch_input_replacement_multiline.snap  rgr__model__item__tests__to_span_lines_input_replacement_trailing_line_feed-2.snap  rgr__model__item__tests__to_span_lines_input_replacement_trailing_line_feed.snap  rgr__model__item__tests__to_span_lines_line_wrapping-2.snap  rgr__model__item__tests__to_span_lines_line_wrapping.snap  rgr__model__item__tests__to_span_lines_line_wrapping_confirm_replacement.snap  rgr__model__item__tests__to_span_lines_line_wrapping_input_replacement-2.snap  rgr__model__item__tests__to_span_lines_line_wrapping_input_replacement.snap  rgr__model__item__tests__to_span_lines_multiline_confirm_replacement_with_multiline_matches.snap  rgr__model__item__tests__to_span_lines_multiline_input_replacement_with_multiline_matches.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy-3.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_confirm_replacement-3.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_confirm_replacement.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_input_replacement-2.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_input_replacement-3.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_input_replacement-4.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_selected-3.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_selected-4.snap  rgr__model__item__tests__to_span_lines_with_base64_lossy_selected.snap  rgr__model__item__tests__to_span_lines_with_deselected_submatch.snap  rgr__model__item__tests__to_span_lines_with_deselected_submatch_confirm_replacement.snap  rgr__model__item__tests__to_span_lines_with_deselected_submatch_input_replacement.snap  rgr__model__item__tests__to_span_lines_with_multiline_matches.snap  rgr__model__item__tests__to_span_lines_with_multiline_replacement.snap  rgr__model__item__tests__to_span_lines_with_text-2.snap  rgr__model__item__tests__to_span_lines_with_text-3.snap  rgr__model__item__tests__to_span_lines_with_text_confirm_replacement-2.snap  rgr__model__item__tests__to_span_lines_with_text_confirm_replacement.snap  rgr__model__item__tests__to_span_lines_with_text_input_replacement-2.snap  rgr__model__item__tests__to_span_lines_with_text_selected-2.snap  rgr__model__item__tests__to_span_lines_with_text_selected-3.snap  rgr__model__item__tests__to_span_lines_with_text_selected-4.snap  rgr__model__item__tests__to_span_lines_with_text_selected.snap
src/rg/: de.rs  de_borrow.rs  de_printable.rs  encoding.rs  exec.rs  mod.rs  read.rs
src/ui/: app.rs  mod.rs  render.rs  tui.rs
src/ui/app/: app_events.rs  app_render.rs  application.rs  item.rs  mod.rs  state.rs
src/ui/line/: item.rs  mod.rs  sub_item.rs
src/ui/line/snapshots/: rgr__ui__line__item__tests__line_numbers_with_line_wrap_multi_submatch_input_replacement_multiline.snap  rgr__ui__line__item__tests__to_span_lines_input_replacement_trailing_line_feed-2.snap  rgr__ui__line__item__tests__to_span_lines_input_replacement_trailing_line_feed.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping-2.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping_confirm_replacement-2.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping_confirm_replacement.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping_input_replacement-2.snap  rgr__ui__line__item__tests__to_span_lines_line_wrapping_input_replacement.snap  rgr__ui__line__item__tests__to_span_lines_multiline_confirm_replacement_with_multiline_matches.snap  rgr__ui__line__item__tests__to_span_lines_with_base64_lossy-2.snap  (+30 more)
