[package]
name = "repgrep"
version = "0.9.0"
description = "An interactive command line replacer for `ripgrep`."
homepage = "https://github.com/acheronfail/repgrep"
repository = "https://github.com/acheronfail/repgrep"
keywords = ["find", "replace", "ripgrep", "regex", "grep"]
categories = ["command-line-utilities", "text-processing"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "Unlicense OR MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[[bin]]
name = "rgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
chardet = "0.2.4"
clap = "3.0.0-beta.2"
crossterm = "0.18.0"
either = "1.6.1"
encoding = "0.2.33"
flexi_logger = "0.16.1"
log = "0.4.11"
safe-transmute = "0.11.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.59"
tempfile = "3.1.0"
tui = { version = "0.12.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"

[dev-dependencies]
hex = "0.4.2"
insta = { version = "1.1.0", features = ["backtrace"] }
pretty_assertions = "0.6.1"
