[package]
name = "repgrep"
version = "0.14.2"
description = "An interactive command line replacer for `ripgrep`."
homepage = "https://github.com/acheronfail/repgrep"
repository = "https://github.com/acheronfail/repgrep"
keywords = ["find", "replace", "ripgrep", "regex", "grep"]
categories = ["command-line-utilities", "text-processing"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "Unlicense OR MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "acheronfail/repgrep" }
is-it-maintained-open-issues = { repository = "acheronfail/repgrep" }

[[bin]]
name = "rgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.37"
base64-simd = { version = "0.8.0", features = ["detect"] }
chardet = "0.2.4"
clap = { version = "4.1.9", features = ["cargo", "derive"] }
const_format = "0.2.11"
crossterm = "0.26.1"
either = "1.6.1"
encoding = "0.2.33"
flexi_logger = "0.25.3"
log = "0.4.11"
regex = "1.8.4"
safe-transmute = "0.11.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0.118"
serde_json = "1.0.61"
tempfile = "3.1.0"
ratatui = { version = "0.22.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"

[build-dependencies]
clap = { version = "4.1.9", features = ["cargo", "derive"] }
clap_complete = "4.1.5"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
crossbeam-queue = "0.3.8"
hex = "0.4.2"
insta = "1.28.0"
memmap = "0.7.0"
num_cpus = "1.15.0"
paste = "1.0.12"
pretty_assertions = "1.3.0"
rayon = "1.7.0"

[profile.release]
# See: https://github.com/johnthagen/min-sized-rust
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[[bench]]
name = "parsing_json"
harness = false
